<resources>
    <string name="promoter">Promoter</string>
    <string name="eMail">E-mail</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="billingInfo">Billing email</string>
    <string name="emergencyContact">Emergency contact</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="goer_sign_terms">Terms and Conditions</string>
    <string name="terms_and_conditions_title">
        Terms and Conditions
    </string>
    <string name="terms_and_conditions_updated">
        Last updated: February 07, 2017
    </string>
    <string name="terms_and_conditions_intro">
        &#160;Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using
        the www.executivemmethods.com website and the Go party
        tonight mobile application (together, or individually, the "Service")
        operated by Executivemmethods Inc ("us", "we", or "our").
        Your access to and use of the Service is conditioned upon your
        acceptance of and compliance with these Terms. These Terms
        apply to all visitors, users and others who wish to access or use
        the Service.
        By accessing or using the Service you agree to be bound by these
        Terms. If you disagree with any part of the terms then you do not
        have permission to access the Service.
    </string>
    <string name="terms_and_conditions_subscriptions">
        &#160;Some parts of the Service are billed on a subscription basis ("Subscription(s)"). You will be billed in advance on a recurring and
        periodic basis ("Billing Cycle"). Billing cycles are set on a monthly
        basis.
        At the end of each Billing Cycle, your Subscription will
        automatically renew under the exact same conditions unless you
        cancel it or Executivemmethods Inc cancels it. You may cancel
        your Subscription renewal either through your online account
        management page or by contacting Executivemmethods Inc
        customer support team.
        A valid payment method, including credit card or PayPal, is
        required to process the payment for your Subscription. You shall
        provide Executivemmethods Inc with accurate and complete billing information including full name, address, state, zip code, telephone
        number, and a valid payment method information. By submitting
        such payment information, you automatically authorize
        Executivemmethods Inc to charge all Subscription fees incurred
        through your account to any such payment instruments.
        Should automatic billing fail to occur for any reason,
        Executivemmethods Inc will issue an electronic invoice indicating
        that you must proceed manually, within a certain deadline date,
        with the full payment corresponding to the billing period as
        indicated on the invoice.
    </string>
    <string name="terms_and_conditions_fee">
        &#160;Executivemmethods Inc , in its sole discretion and at any time, may modify the Subscription fees for the Subscriptions. Any
        Subscription fee change will become effective at the end of the
        then-current Billing Cycle.
        Executivemmethods Inc will provide you with a reasonable prior
        notice of any change in Subscription fees to give you an
        opportunity to terminate your Subscription before such change
        becomes effective.
        Your continued use of the Service after the Subscription fee
        change comes into effect constitutes your agreement to pay the
        modified Subscription fee amount.
    </string>
    <string name="terms_and_conditions_refunds">
        &#160;Except when required by law, paid Subscription fees are non-refundable.
    </string>
    <string name="terms_and_conditions_accounts">
        &#160;When you create an account with us, you guarantee that you are above the age of 18, and that the information you provide us is
        accurate, complete, and current at all times. Inaccurate,
        incomplete, or obsolete information may result in the immediate
        termination of your account on the Service.
        You are responsible for maintaining the confidentiality of your
        account and password, including but not limited to the restriction
        of access to your computer and/or account. You agree to accept
        responsibility for any and all activities or actions that occur under
        your account and/or password, whether your password is with our
        Service or a third-party service. You must notify us immediately
        upon becoming aware of any breach of security or unauthorized
        use of your account YOU MUST BE 21 YEARS OF AGE TO USE
        THIS APPLICATION.
        You may not use as a username the name of another person or
        entity or that is not lawfully available for use, a name or trademark
        that is subject to any rights of another person or entity other than
        you, without appropriate authorization. You may not use as a
        username any name that is offensive, vulgar or obscene.
        Intellectual Property The Service and its original content, features
        and functionality are and will remain the exclusive property of
        Executivemmethods Inc and its licensors. The Service is protected
        by copyright, trademark, and other laws of both the United States
        and foreign countries. Our trademarks and trade dress may not be
        used in connection with any product or service without the prior
        written consent of Executivemmethods Inc .
    </string>
    <string name="terms_and_conditions_links">
        &#160;Our Service may contain links to third party web sites or services that are not owned or controlled by Executivemmethods Inc .
        Executivemmethods Inc has no control over, and assumes no
        responsibility for the content, privacy policies, or practices of any
        third party web sites or services. We do not warrant the offerings of
        any of these entities/individuals or their websites.
        You acknowledge and agree that Executivemmethods Inc shall not
        be responsible or liable, directly or indirectly, for any damage or
        loss caused or alleged to be caused by or in connection with use
        of or reliance on any such content, goods or services available on
        or through any such third party web sites or services.
        We strongly advise you to read the terms and conditions and
        privacy policies of any third party web sites or services that you
        visit.
    </string>
    <string name="terms_and_conditions_termination">
        &#160;We may terminate or suspend your account and bar access to the Service immediately, without prior notice or liability, under our sole
        discretion, for any reason whatsoever and without limitation,
        including but not limited to a breach of the Terms.
        If you wish to terminate your account, you may simply discontinue
        using the Service.
        All provisions of the Terms which by their nature should survive
        termination shall survive termination, including, without limitation,
        ownership provisions, warranty disclaimers, indemnity and
        limitations of liability.
    </string>
    <string name="terms_and_conditions_indemnification">
        &#160;You agree to defend, indemnify and hold harmless Executivemmethods Inc and its licensee and licensors, and their
        employees, contractors, agents, officers and directors, from and
        against any and all claims, damages, obligations, losses, liabilities,
        costs or debt, and expenses (including but not limited to attorney\'s
        fees), resulting from or arising out of a) your use and access of the
        Service, by you or any person using your account and password,
        or b) a breach of these Terms.
    </string>
    <string name="terms_and_conditions_limitation">
        &#160;In no event shall Executivemmethods Inc , nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for
        any indirect, incidental, special, consequential or punitive
        damages, including without limitation, loss of profits, data, use,
        goodwill, or other intangible losses, resulting from (i) your access to
        or use of or inability to access or use the Service; (ii) any conduct
        or content of any third party on the Service; (iii) any content
        obtained from the Service; and (iv) unauthorized access, use or
        alteration of your transmissions or content, whether based on
        warranty, contract, tort (including negligence) or any other legal
        theory, whether or not we have been informed of the possibility of
        such damage, and even if a remedy set forth herein is found to
        have failed of its essential purpose.
    </string>
    <string name="terms_and_conditions_disclaimer">
        &#160;Your use of the Service is at your sole risk. The Service is provided on an "AS IS" and "AS AVAILABLE" basis. The Service is provided
        without warranties of any kind, whether express or implied,
        including, but not limited to, implied warranties of merchantability,
        fitness for a particular purpose, non-infringement or course of
        performance.
        Executivemmethods Inc its subsidiaries, affiliates, and its licensors
        do not warrant that a) the Service will function uninterrupted,
        secure or available at any particular time or location; b) any errors
        or defects will be corrected; c) the Service is free of viruses or other harmful components; or d) the results of using the Service will meet
        your requirements.
    </string>
    <string name="terms_and_conditions_exclusions">
        &#160;Some jurisdictions do not allow the exclusion of certain warranties or the exclusion or limitation of liability for consequential or
        incidental damages, so the limitations above may not apply to you.
    </string>
    <string name="terms_and_conditions_governing">
        &#160;These Terms shall be governed and construed in accordance with the laws of California, United States, without regard to its conflict
        of law provisions.
        Our failure to enforce any right or provision of these Terms will not
        be considered a waiver of those rights. If any provision of these
        Terms is held to be invalid or unenforceable by a court, the
        remaining provisions of these Terms will remain in effect. These
        Terms constitute the entire agreement between us regarding our
        Service, and supersede and replace any prior agreements we
        might have had between us regarding the Service.
    </string>
    <string name="terms_and_conditions_changes">
        &#160;We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will provide at
        least 30 days notice prior to any new terms taking effect. What
        constitutes a material change will be determined at our sole
        discretion.
        By continuing to access or use our Service after any revisions
        become effective, you agree to be bound by the revised terms. If
        you do not agree to the new terms, you are no longer authorized to
        use the Service.
    </string>
    <string name="terms_and_conditions_contact_us">
        If you have any questions about these Terms, please contact us.
    </string>
    <string name="terms_and_conditions_i_agree">
        I agree to the\u0020
    </string>
</resources>