<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorProgressDialog"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin_less"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbAgreedWithTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="2dp" />

        <app.media.opp.partytonight.presentation.app.view.TextViewAgudaBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/terms_and_conditions_i_agree"
            android:textColor="@android:color/white"
            android:textSize="11sp" />

        <app.media.opp.partytonight.presentation.app.view.ButtonTransparent
            android:id="@+id/bTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/goer_sign_terms"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <app.media.opp.partytonight.presentation.app.view.ButtonCurvedTranslucent
        android:id="@+id/bLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin_less"
        android:paddingBottom="@dimen/button_curved_transparent_padding_vertical"
        android:paddingTop="@dimen/button_curved_transparent_padding_vertical"
        android:text="@string/logIn"
        android:textColor="@color/colorButtonTransparentText"
        android:textSize="@dimen/button_curved_transparent_text_size" />

</LinearLayout>